# telescope

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-11-ollama-embedding-support.md
src/telescope/: __init__.py  config.py  graph_client.py  models.py  server.py
src/telescope/backends/: __init__.py  base.py  factory.py  neo4j.py  postgres.py
src/telescope/embeddings/: __init__.py  base.py  factory.py  ollama_provider.py  openai_provider.py
tests/: conftest.py  test_config.py  test_contract_integration.py  test_graph_client.py  test_models.py  test_postgres_contract_integration.py  test_server.py
tests/backends/: test_base.py  test_factory.py  test_neo4j.py  test_postgres_read.py
tests/embeddings/: test_base.py  test_factory.py  test_ollama_provider.py  test_openai_provider.py
tests/fixtures/contract_repo/src/cs/: AuthService.cs
tests/fixtures/contract_repo/src/java/com/example/: Service.java
tests/fixtures/contract_repo/src/py/: demo.py
tests/fixtures/contract_repo/src/ui/: App.tsx
