[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telescope"
version = "0.1.0"
description = "MCP server for querying Constellation code knowledge graphs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mcp>=1.25.0",
    "neo4j>=6.1.0",
    "openai>=2.15.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "httpx>=0.27",  # direct dep for OllamaEmbeddingProvider (would otherwise be transitive via openai)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.9.0",
]

[project.scripts]
telescope = "telescope.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/telescope"]

[tool.hatch.build.targets.sdist]
include = ["src/telescope"]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: requires local Neo4j plus Constellation parser environment",
    "postgres_integration: requires Docker (auto-managed via testcontainers)",
]
